# test-flask-rest

./: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
api/v1/: auth.py  greetings.py  sensors.py  students.py
