[tool.poetry]
name = "check-spectree"
version = "0.1.0"
description = ""
authors = ["Christian Espinoza <chespinoza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spectree = "^0.2.4"
flask = "^1.1.1"
flask-restful = "^0.3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^1.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
